--- a/app/src/main/res/layout/item_list_of_photos.xml
+++ b/app/src/main/res/layout/item_list_of_photos.xml
@@ -1,29 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:foreground="?selectableItemBackground"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="8dp">
+    android:foreground="?selectableItemBackground">
 
-    <ImageView
-        android:id="@+id/imageViewItemListOfPhotosPhoto"
-        android:layout_width="128dp"
-        android:layout_height="128dp"
-        tools:src="@tools:sample/avatars" />
-
-    <TextView
-        android:id="@+id/textViewItemListOfPhotosAuthorName"
-        android:layout_width="120dp"
+    <com.google.android.material.card.MaterialCardView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:layout_margin="4dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        android:textColor="@color/white"
-        tools:text="1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21" />
+        android:layout_gravity="center_horizontal"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="8dp"
+        app:strokeWidth="0dp">
 
-</com.google.android.material.card.MaterialCardView>
+        <ImageView
+            android:id="@+id/imageViewItemListOfPhotosPhoto"
+            android:layout_width="256dp"
+            android:layout_height="256dp"
+            android:scaleType="centerCrop"
+            tools:src="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/textViewItemListOfPhotosAuthorName"
+            android:layout_width="256dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:padding="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+            android:textColor="@color/white"
+            tools:text="1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23" />
+
+    </com.google.android.material.card.MaterialCardView>
+
+</FrameLayout>
