--- a/app/src/main/res/layout/item_list_of_photos.xml
+++ b/app/src/main/res/layout/item_list_of_photos.xml
@@ -26,6 +26,7 @@
             android:layout_width="256dp"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
+            android:background="@drawable/bg_item_list_of_photos_title"
             android:ellipsize="end"
             android:maxLines="1"
             android:padding="8dp"
